# UrethraSeg

./: CMakeLists.txt
UrethraSegmentation/: CMakeLists.txt  UrethraSegmentation.py
UrethraSegmentation/Resources/UI/: UrethraSegmentation.ui
